--- a/viewer-code/code.html
+++ b/viewer-code/code.html
@@ -8,9 +8,30 @@
 
   </head>
   <body>
-    <div id="editor">CODE</div>
+    <div id="editor"></div>
     <script>
+
+        function readTextFile(file, callback)
+        {
+            var rawFile = new XMLHttpRequest();
+            rawFile.open("GET", file, false);
+            rawFile.onreadystatechange = function ()
+            {
+                if(rawFile.readyState === 4)
+                {
+                    if(rawFile.status === 200 || rawFile.status == 0)
+                    {
+                        callback(rawFile.responseText);
+                    }
+                }
+            }
+            rawFile.send(null);
+        }
+
         var editor = ace.edit("editor");
+        readTextFile('./code.code', function(data) {
+          editor.setValue(data, 1);
+        });
     </script>
   </body>
 </html>
