Fix typo in path

--- a/viewer-code/code.html
+++ b/viewer-code/code.html
@@ -4,7 +4,7 @@
     <title>Code Viewer</title>
     <meta charset="utf-8" />
 
-    <script src="src/ace.js"></script>
+    <script src="src-min-noconflict/ace.js"></script>
 
   </head>
   <body>
