--- a/viewer-code/code.html
+++ b/viewer-code/code.html
@@ -5,7 +5,17 @@
     <meta charset="utf-8" />
 
     <script src="src-min-noconflict/ace.js"></script>
-
+    <style type="text/css">
+      #editor {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+      }
+      body{
+        margin:0;
+        padding:0;
+      }
+    </style>
   </head>
   <body>
     <div id="editor"></div>
@@ -29,6 +39,9 @@
         }
 
         var editor = ace.edit("editor");
+        editor.setOptions({
+          maxLines: Infinity
+        });
         readTextFile('./code.code', function(data) {
           editor.setValue(data, 1);
         });
