--- a/viewer-code/code.html
+++ b/viewer-code/code.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
 
     <script src="src-min-noconflict/ace.js"></script>
-    <script src="src-min-noconflict/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
-    <script src="src/mode-CODEMODE.js" type="text/javascript" charset="utf-8"></script>
+    <script src="src-min-noconflict/theme-eclipse.js" type="text/javascript" charset="utf-8"></script>
+    <script src="src-min-noconflict/mode-CODEMODE.js" type="text/javascript" charset="utf-8"></script>
     <style type="text/css">
       #editor {
         width: 100%;
@@ -41,10 +41,12 @@
         }
 
         var editor = ace.edit("editor");
-        editor.setTheme("ace/theme/twilight");
+        editor.setTheme("ace/theme/eclipse");
         editor.setOptions({
           maxLines: Infinity
         });
+        var CodeMode = ace.require("ace/mode/CODEMODE").Mode;
+        editor.session.setMode(new CodeMode());
         readTextFile('./code.code', function(data) {
           editor.setValue(data, 1);
         });
